Fix Create Task for member.

--- a/WebClient/Pages/ManageTasks.razor
+++ b/WebClient/Pages/ManageTasks.razor
@@ -60,9 +60,9 @@
     {
         var task = new TaskVm()
         {
-            Id = Guid.NewGuid(),
             IsComplete = false,
             Subject = newTask,
+            AssignedMemberId = memberService.SelectedMember != null ? memberService.SelectedMember.Id : new Nullable<Guid>(),
             Member = memberService.SelectedMember
         };
 
