--- a/WebClient/Shared/Components/LeftMenu.razor
+++ b/WebClient/Shared/Components/LeftMenu.razor
@@ -69,7 +69,14 @@
 <div class="menu-wrapper col-12 p-0">
     @if(MenuItems != null && MenuItems.Length > 0) {
         @foreach (var item in MenuItems) {
-            <div class="menu-item col-10 offset-1 p-3 my-4 p-sm-2 @(item.isActive ? "active" : "")" @onclick="@(e => SelectMember(item.referenceId))">
+            <div class="menu-item col-10 offset-1 p-3 my-4 p-sm-2 @(item.isActive ? "active" : "") dropzone @dropClass"
+                 ondragover="event.preventDefault();"
+                 ondragstart="event.dataTransfer.setData('', event.target.id);"
+                 @onclick="@(e => SelectMember(item.referenceId))"
+                 @ondrop="HandleDrop"
+                 @ondragenter="HandleDragEnter"
+                 @ondragleave="HandleDragLeave">
+
                 @if(item.iconColor != null) {
                     <div class="avtar mr-3" style="background-color: @(item.iconColor);"> </div>
                 }
@@ -141,6 +148,26 @@
     private void OnAddItem()
     {
         memberService.SelectNullMember();
+    }
+
+    string dropClass = "";
+
+    private void HandleDragEnter()
+    {
+       // ToDo: Check canDrop task
+        dropClass = "can-drop";
+    }
+
+    private void HandleDragLeave()
+    {
+        dropClass = "";
+    }
+
+    private async Task HandleDrop()
+    {
+        dropClass = "";
+
+        // ToDo: TaskService.AssignTask(taskId, memberId);
     }
 
 }
