TaskComplete main backend

--- a/WebClient/Components/TaskListerComponent.razor
+++ b/WebClient/Components/TaskListerComponent.razor
@@ -77,7 +77,7 @@
 
     private void ToggleTask(TaskVm model)
     {
-        taskService.ToggleTask(model.Id);
+        taskService.ToggleTask(model);
         StateHasChanged();
     }
 
