Fix assing task to same member

--- a/WebClient/Shared/Components/LeftMenu.razor
+++ b/WebClient/Shared/Components/LeftMenu.razor
@@ -199,6 +199,7 @@
         await JSRuntime.InvokeVoidAsync("RefreshMenuItemsDragStatus", null);
 
         var task = taskService.DragedTask;
+        if (task.Member?.Id == memberId) return;
         if (task.Member == null)
             task.Member = new Domain.ViewModel.MemberVm();
         task.Member.Id = memberId;
