--- a/WebClient/Components/TaskListerComponent.razor
+++ b/WebClient/Components/TaskListerComponent.razor
@@ -72,14 +72,23 @@
     {
         memberService.SelectedMemberChanged += MemberServiceOnSelectedMemberChanged;
         taskService.TasksUpdated += TaskServiceOnTasksUpdated;
+        taskService.CompleteTaskFailed += TaskServiceOnCompleteTaskFailed;
         LoadCurrentTasks();
         return base.OnInitializedAsync();
     }
 
     private void ToggleTask(TaskVm model)
     {
-        taskService.ToggleTask(model);
-        StateHasChanged();
+        if (model == null) return;
+        if (model.IsComplete)
+        {
+            taskService.ToggleTask(model.Id);
+            StateHasChanged();
+        }
+        else {
+            model.IsComplete = true;
+            StateHasChanged();
+        }
     }
 
     private void TaskServiceOnTasksUpdated(object sender, EventArgs e)
@@ -88,6 +97,11 @@
     }
 
     private void MemberServiceOnSelectedMemberChanged(object sender, EventArgs e)
+    {
+        LoadCurrentTasks();
+    }
+
+    private void TaskServiceOnCompleteTaskFailed(object sender, string message)
     {
         LoadCurrentTasks();
     }
