Change cursor style for draggable tasks

--- a/WebClient/Components/TaskListerComponent.razor
+++ b/WebClient/Components/TaskListerComponent.razor
@@ -8,6 +8,9 @@
 @namespace WebClient.Components
 
 <style>
+    .task-wrapper .task-item[draggable="true"] {
+        cursor: grab;
+    }
     .task-wrapper .task-item {
         background: #FFFFFF;
         border: 1px solid #C5C9C9;
