--- a/WebClient/Components/TaskListerComponent.razor
+++ b/WebClient/Components/TaskListerComponent.razor
@@ -1,9 +1,10 @@
 @using WebClient.Abstractions
-@using WebClient.Shared.Models
 @using Domain.ViewModel
+@using Microsoft.JSInterop
 
 @inject ITaskDataService taskService;
 @inject IMemberDataService memberService;
+@inject IJSRuntime JSRuntime
 
 @namespace WebClient.Components
 
@@ -11,6 +12,7 @@
     .task-wrapper .task-item[draggable="true"] {
         cursor: grab;
     }
+
     .task-wrapper .task-item {
         background: #FFFFFF;
         border: 1px solid #C5C9C9;
@@ -19,26 +21,32 @@
         font-size: 24px;
         font-family: "Poppins Light";
     }
+
     .done-text {
         text-decoration: line-through;
     }
+
     .task-wrapper .avtar {
         width: 32px;
         height: 32px;
         border-radius: 50%;
     }
-    @@media(max-width: 1400px) { 
-        .task-wrapper .task-item { 
+
+    @@media(max-width: 1400px) {
+        .task-wrapper .task-item {
             font-size: 16px;
         }
+
         .task-wrapper .avtar {
             width: 24px;
             height: 24px;
         }
+
         .delete-icon {
             width: 25px;
         }
     }
+
     @@media(max-width: 767.98px) {
         .task-wrapper .avtar {
             width: 16px;
@@ -52,16 +60,16 @@
     {
         <div class="task-item p-3 my-3 row m-0 draggable" draggable="true" @ondragstart="@(() => HandleDragStart(item.Id))">
             <div class="col-10 p-0">
-                <Check TValue="bool" Checked="@item.IsComplete" CheckedChanged="@(val => ToggleTask(item))">
+                <Check Name="@item.Id.ToString()" TValue="bool" Checked="@item.IsComplete" CheckedChanged="@(val => ToggleTask(item))">
                     <span class="@(item.IsComplete ? "done-text" : "")">@item.Subject</span>
                 </Check>
             </div>
-            <p>test text</p>
             <div class="col-2 p-0 d-flex justify-content-end align-items-center">
-                @if (item.Member != null) {
+                @if (item.Member != null)
+                {
                     <div class="avtar mr-1" style="background-color: @item.Member.Avatar;"></div>
                 }
-                <img class="delete-icon" src="/assets/images/delete-icon.svg"/>
+                <img class="delete-icon" src="/assets/images/delete-icon.svg" />
             </div>
         </div>
     }
@@ -81,17 +89,19 @@
         return base.OnInitializedAsync();
     }
 
-    private void ToggleTask(TaskVm model)
+    private async Task ToggleTask(TaskVm model)
     {
         if (model == null) return;
         if (!model.IsComplete)
         {
-            taskService.ToggleTask(model.Id);
+            await taskService.ToggleTask(model.Id);
             StateHasChanged();
         }
-        else {
+        else
+        {
             model.IsComplete = true;
             StateHasChanged();
+            await JSRuntime.InvokeVoidAsync("SetCheck", model.Id.ToString());
         }
     }
 
@@ -128,7 +138,6 @@
     private void HandleDragStart(Guid taskId)
     {
         taskService.SelectDragedTask(taskId);
-
     }
 
 }
